--- a/system/templates/system/title-som.html
+++ b/system/templates/system/title-som.html
@@ -26,11 +26,7 @@
 
                 element = document.getElementById(id);
 
-                if(element.style.borderWidth == "3px"){
-                    element.style.borderWidth = "0px";
-                }else{
-                    element.style.border = "solid 3px black";
-                }
+                element.style.outline = "solid 5px #27acd9";
 
                 element.scrollIntoView({
                     behavior: "smooth",
