--- a/static/css/for_image_som.css
+++ b/static/css/for_image_som.css
@@ -1,10 +1,12 @@
 figure {
     display: inline-block;
-    margin: 1px 1px 1px 1px;
+    z-index: 0;
+    margin: 2px 2px 2px 2px;
     position: relative;
 }
 figure img {
     display: block;
+    z-index: 0;
     width: 100%;
     margin: 0px 0px 0px 0px;
 }
