--- a/static/css/for_image_som.css
+++ b/static/css/for_image_som.css
@@ -1,14 +1,26 @@
+:root {
+    --color: rgb(0, 81, 255, 1.0);
+}
+
 figure {
     display: inline-block;
-    margin: 2px 2px 2px 2px;
+    background-color: var(--color);
+    width: 100%;
+    margin: 2px 2px 2px 0px;
     position: relative;
 }
 figure img {
     display: block;
-    width: 100%;
-    margin: 0px 0px 0px 0px;
+    margin: 5.5px 5.5px 5.5px 5.5px;
+    width: 90%;
+    /*margin: 0px 0px 0px 0px;*/
 }
 
+figcaption {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .scale-img {
     transition-duration: 0.1s; /*変化の時間*/
 }
@@ -137,7 +149,8 @@ figure img:hover + .fukidashi_up_right{
 
 #container{
     display: grid;
-    grid-template-columns: repeat(11, 100px);
+    /*grid-template-columns: repeat(11, 110px);*/
+    grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
     column-gap: 4px;
     row-gap: 4px;
 }
