--- a/static/css/for_title_som.css
+++ b/static/css/for_title_som.css
@@ -1,16 +1,28 @@
+:root {
+    --color: rgb(0, 81, 255, 1.0);
+    --font_color: hsla(360, 0%, 100%, 1);
+}
+
 figure {
     display: inline-block;
     margin: 2px 2px 2px 2px;
-    background-color: rgb(241, 241, 241);
-    border: 1px solid #ccc;
+    width: 100%;
+    background-color: var(--color);
+    position: relative;
 }
 figure img {
     display: block;
-    width: 100%;
-    margin: 0px 0px 2px 0px;
+    margin: 5.5px 5.5px 5.5px 5.5px;
+    width: 90%;
+    /*margin: 0px 0px 2px 0px;*/
 }
 figcaption {
+    overflow:hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
     font-size: 0.8em;
+    color: var(--font_color);
     text-align: center;
 }
 .scale-img {
@@ -20,9 +32,130 @@ figcaption {
     transform: scale(1.05, 1.05); /*画像の拡大*/
     cursor: pointer; /*カーソルをポインターにする*/
 }
+
+.fukidashi_under_left {
+    display: none;
+    position: absolute;
+    z-index: 10;
+    width: max-content;
+    left: 0%;
+    bottom: -100px;
+    padding: 16px;
+    border:1px solid #333;
+    border-radius: 2px;
+    background: rgb(255, 255, 255);
+    color: rgb(60, 60, 60);
+    font-weight: bold;
+}
+.fukidashi_under_center {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    width: max-content;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -100px;
+    padding: 16px;
+    border:1px solid #333;
+    border-radius: 2px;
+    background: rgb(255, 255, 255);
+    color: rgb(60, 60, 60);
+    font-weight: bold;
+}
+.fukidashi_under_right {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    width: max-content;
+    right: 0%;
+    bottom: -100px;
+    padding: 16px;
+    border:1px solid #333;
+    border-radius: 2px;
+    background: rgb(255, 255, 255);
+    color: rgb(60, 60, 60);
+    font-weight: bold;
+}
+
+
+.fukidashi_up_left {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    width: max-content;
+    left: 0%;
+    top: -100px;
+    padding: 16px;
+    border:1px solid #333;
+    border-radius: 2px;
+    background: rgb(255, 255, 255);
+    color: rgb(60, 60, 60);
+    font-weight: bold;
+}
+.fukidashi_up_center {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    width: max-content;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -100px;
+    padding: 16px;
+    border:1px solid #333;
+    border-radius: 2px;
+    background: rgb(255, 255, 255);
+    color: rgb(60, 60, 60);
+    font-weight: bold;
+}
+.fukidashi_up_right {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    width: max-content;
+    right: 0%;
+    top: -100px;
+    padding: 16px;
+    border:1px solid #333;
+    border-radius: 2px;
+    background: rgb(255, 255, 255);
+    color: rgb(60, 60, 60);
+    font-weight: bold;
+}
+
+figure img:hover + .fukidashi_under_left{
+    display: block;
+    cursor: pointer;
+}
+
+figure img:hover + .fukidashi_under_center{
+    display: block;
+    cursor: pointer;
+}
+
+figure img:hover + .fukidashi_under_right{
+    display: block;
+    cursor: pointer;
+}
+
+
+figure img:hover + .fukidashi_up_left{
+    display: block;
+    cursor: pointer;
+}
+figure img:hover + .fukidashi_up_center{
+    display: block;
+    cursor: pointer;
+}
+figure img:hover + .fukidashi_up_right{
+    display: block;
+    cursor: pointer;
+}
+
 #container{
     display: grid;
-    grid-template-columns: repeat(11, 110px);
+    grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
     column-gap: 4px;
     row-gap: 4px;
 }
+
+
