--- a/system/templates/system/som.html
+++ b/system/templates/system/som.html
@@ -33,37 +33,40 @@
 
                 element.style.outline = "solid 5px #27acd9";
 
+                /*
                 element.scrollIntoView({
                     behavior: "smooth",
                     block: "center",
                     inline: "center"
                 });
+                */
             }
         </script>
 
     </head>
     <body onload="scrollToImage()">
         <div id="container">
-            {% for i in image_som %}
-                {% if i != '1' %}
-                    <figure>
-                        <a href={% get_value links i %}  onclick="getID()" target="explanation" >
-                            <img src={{ "/media/images/"|add:i }} alt="写真" class="scale-img" id="{{ i }}">
+            {% for key, value in sorted_dict.items %}
+                {% if key != '1' %}
+                    <figure style="--color: rgb(0, 81, 255, {{ 1.0|multiplication:value }});">
+                        <a href={% get_value links key %}  onclick="getID()" target="explanation" >
+                            <img src={{ "/media/images/"|add:key }} alt="写真" class="scale-img" id="{{ key }}">
 
                             {% if forloop.counter > 71 %}
-                                {% if forloop.counter0|modulo:11 > 7 %}
-                                    <p class="fukidashi_up_right">{% get_value image_title i %}</p>
+                                {% if forloop.counter0|modulo:11 > 5 %}
+                                    <p class="fukidashi_up_right">{% get_value image_title key %}</p>
                                 {% else %}
-                                    <p class="fukidashi_up_left">{% get_value image_title i %}</p>
+                                    <p class="fukidashi_up_left">{% get_value image_title key %}</p>
                                 {% endif %}
                             {% else %}
-                                {% if forloop.counter0|modulo:11 > 7 %}
-                                    <p class="fukidashi_under_right">{% get_value image_title i %}</p>
+                                {% if forloop.counter0|modulo:11 > 5 %}
+                                    <p class="fukidashi_under_right">{% get_value image_title key %}</p>
                                 {% else %}
-                                    <p class="fukidashi_under_left">{% get_value image_title i %}</p>
+                                    <p class="fukidashi_under_left">{% get_value image_title key %}</p>
                                 {% endif %}
                             {% endif %}
                         </a>
+                        <!--<figcaption>{{ value }}</figcaption>-->
                     </figure>
                 {% else %}
                     <div></div>
