--- a/static/css/for_image_som.css
+++ b/static/css/for_image_som.css
@@ -1,18 +1,19 @@
 :root {
-    --color: rgb(0, 81, 255, 1.0);
+    /*--color: rgb(0, 81, 255, 1.0);*/
+    --color: hsla(360, 100%, 50%, 80%);
 }
 
 figure {
     display: inline-block;
-    background-color: var(--color);
+    /*background-color: var(--color);*/
     width: 100%;
     margin: 2px 2px 2px 0px;
     position: relative;
 }
 figure img {
     display: block;
-    margin: 5.5px 5.5px 5.5px 5.5px;
-    width: 90%;
+    /*margin: 5.5px 5.5px 5.5px 5.5px;*/
+    width: 100%;
     /*margin: 0px 0px 0px 0px;*/
 }
 
@@ -149,8 +150,7 @@ figure img:hover + .fukidashi_up_right{
 
 #container{
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
-
+    grid-template-columns: repeat(10, minmax(110px, 1fr));
     column-gap: 4px;
     row-gap: 4px;
 }
