--- a/static/css/for_rep_som.css
+++ b/static/css/for_rep_som.css
@@ -138,8 +138,7 @@ figure img:hover + .fukidashi_up_right{
 
 #container{
     display: grid;
-    grid-template-columns: repeat(22, 110px);
-
+    grid-template-columns: repeat(20, minmax(110px, 1fr));
     column-gap: 4px;
     row-gap: 4px;
 }
