--- a/static/css/for_title_som.css
+++ b/static/css/for_title_som.css
@@ -1,5 +1,5 @@
 :root {
-    --color: rgb(0, 81, 255, 1.0);
+    --color: rgb(0, 0, 255);
     --font_color: hsla(360, 0%, 100%, 1);
 }
 
@@ -153,7 +153,7 @@ figure img:hover + .fukidashi_up_right{
 
 #container{
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-columns: repeat(10, minmax(110px, 1fr));
     column-gap: 4px;
     row-gap: 4px;
 }
