--- a/static/css/for_rep_som.css
+++ b/static/css/for_rep_som.css
@@ -4,6 +4,7 @@ figure {
     margin: 1px 1px 1px 1px;
 
 }
+
 figure img {
     display: block;
     width: 100%;
@@ -13,8 +14,10 @@ figure img {
 .scale-img {
     transition-duration: 0.1s;
 }
+
 .scale-img:hover {
-    transform: scale(1.05,1.05); /*画像の拡大*/
+    transform: scale(1.05, 1.05);
+    /*画像の拡大*/
     cursor: pointer;
 }
 
@@ -26,12 +29,13 @@ figure img {
     left: 0%;
     bottom: -100px;
     padding: 16px;
-    border:1px solid #333;
+    border: 1px solid #333;
     border-radius: 2px;
     background: rgb(255, 255, 255);
     color: rgb(60, 60, 60);
     font-weight: bold;
 }
+
 .fukidashi_under_center {
     display: none;
     position: absolute;
@@ -41,12 +45,13 @@ figure img {
     transform: translateX(-50%);
     bottom: -100px;
     padding: 16px;
-    border:1px solid #333;
+    border: 1px solid #333;
     border-radius: 2px;
     background: rgb(255, 255, 255);
     color: rgb(60, 60, 60);
     font-weight: bold;
 }
+
 .fukidashi_under_right {
     display: none;
     position: absolute;
@@ -55,7 +60,7 @@ figure img {
     right: 0%;
     bottom: -100px;
     padding: 16px;
-    border:1px solid #333;
+    border: 1px solid #333;
     border-radius: 2px;
     background: rgb(255, 255, 255);
     color: rgb(60, 60, 60);
@@ -71,12 +76,13 @@ figure img {
     left: 0%;
     top: -100px;
     padding: 16px;
-    border:1px solid #333;
+    border: 1px solid #333;
     border-radius: 2px;
     background: rgb(255, 255, 255);
     color: rgb(60, 60, 60);
     font-weight: bold;
 }
+
 .fukidashi_up_center {
     display: none;
     position: absolute;
@@ -86,12 +92,13 @@ figure img {
     transform: translateX(-50%);
     top: -100px;
     padding: 16px;
-    border:1px solid #333;
+    border: 1px solid #333;
     border-radius: 2px;
     background: rgb(255, 255, 255);
     color: rgb(60, 60, 60);
     font-weight: bold;
 }
+
 .fukidashi_up_right {
     display: none;
     position: absolute;
@@ -100,45 +107,47 @@ figure img {
     right: 0%;
     top: -100px;
     padding: 16px;
-    border:1px solid #333;
+    border: 1px solid #333;
     border-radius: 2px;
     background: rgb(255, 255, 255);
     color: rgb(60, 60, 60);
     font-weight: bold;
 }
 
-figure img:hover + .fukidashi_under_left{
+figure img:hover+.fukidashi_under_left {
     display: block;
     cursor: pointer;
 }
 
-figure img:hover + .fukidashi_under_center{
+figure img:hover+.fukidashi_under_center {
     display: block;
     cursor: pointer;
 }
 
-figure img:hover + .fukidashi_under_right{
+figure img:hover+.fukidashi_under_right {
     display: block;
     cursor: pointer;
 }
 
 
-figure img:hover + .fukidashi_up_left{
-    display: block;
-    cursor: pointer;
-}
-figure img:hover + .fukidashi_up_center{
-    display: block;
-    cursor: pointer;
-}
-figure img:hover + .fukidashi_up_right{
+figure img:hover+.fukidashi_up_left {
     display: block;
     cursor: pointer;
 }
 
-#container{
+figure img:hover+.fukidashi_up_center {
+    display: block;
+    cursor: pointer;
+}
+
+figure img:hover+.fukidashi_up_right {
+    display: block;
+    cursor: pointer;
+}
+
+#container {
     display: grid;
-    grid-template-columns: repeat(20, minmax(110px, 1fr));
+    grid-template-columns: repeat(22, minmax(50px, 1fr));
     column-gap: 4px;
     row-gap: 4px;
 }
