--- a/static/css/botton.css
+++ b/static/css/botton.css
@@ -1,63 +1,86 @@
-a.btn_01 {
+.btn_01 {
 	display: block;
-    position: flex;
+	position: flex;
 	text-align: center;
 	text-decoration: none;
 	width: 18%;
 	margin: auto;
 	padding: 1em;
 	font-weight: bold;
-    font-size: 1em;
+	font-size: 1em;
+	border: 2px solid rgb(255, 85, 0);
+	color: rgb(255, 85, 0);
+	transition: 0.5s;
+}
+
+.btn_01:hover {
+	color: #fff;
+	background: rgb(255, 85, 0);
+}
+
+.btn_02 {
+	display: block;
+	position: flex;
+	text-align: center;
+	text-decoration: none;
+	width: 18%;
+	margin: auto;
+	padding: 1em;
+	font-weight: bold;
+	font-size: 1em;
 	border: 2px solid #27acd9;
 	color: #27acd9;
 	transition: 0.5s;
 }
-a.btn_01:hover {
+
+.btn_02:hover {
 	color: #fff;
 	background: #27acd9;
 }
 
-a.btn_02 {
+.btn_03 {
 	display: block;
-    position: flex;
+	position: flex;
 	text-align: center;
 	text-decoration: none;
 	width: 18%;
 	margin: auto;
 	padding: 1em;
 	font-weight: bold;
-    font-size: 1em;
+	font-size: 1em;
 	border: 2px solid #d92727;
 	color: #d92727;
 	transition: 0.5s;
 }
-a.btn_02:hover {
+
+.btn_03:hover {
 	color: #fff;
 	background: #d92727;
 }
 
 .slider {
-    position: fixed;
-    z-index: 20;
-    top: 10px;
-    left: 30px;
+	position: fixed;
+	z-index: 20;
+	top: 10px;
+	left: 30px;
 }
 
 .fukidashi {
-    display: none;
-    position: absolute;
-    z-index: 100;
-    width: max-content;
-    left: 110%;
-    top: 20%;
-    padding: 16px;
-    border:1px solid #333;
-    border-radius: 2px;
-    background: rgb(255, 255, 255);
-    color: rgb(60, 60, 60);
-    font-weight: bold;
-    font-size: 0.5em;
+	display: none;
+	position: absolute;
+	z-index: 100;
+	width: max-content;
+	left: 110%;
+	top: 20%;
+	padding: 16px;
+	border: 1px solid #333;
+	border-radius: 2px;
+	background: rgb(255, 255, 255);
+	color: rgb(60, 60, 60);
+	font-weight: bold;
+	font-size: 0.5em;
 }
+
 /*
 a:hover .fukidashi {
     display: block;
